--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="register">Зарегистрироваться</string>
     
     <string-array name="sex">
-        <item>Женский</item>
-        <item>Мужской</item>
+        <item>Жен</item>
+        <item>Муж</item>
     </string-array>
 </resources>
