--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,10 @@
     <string name="tagline">Если хотите контролировать 80% себя - контролируйте воду</string>
     <string name="auth">Войти</string>
     <string name="register">Зарегистрироваться</string>
-    
+
     <string-array name="sex">
         <item>Жен</item>
         <item>Муж</item>
     </string-array>
+    <string name="title_activity_auth">AuthActivity</string>
 </resources>
